--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -17,12 +17,12 @@
       <img src="./images/image-qr-code.png" alt="QR code" width="288px" height="288px">
     </div>
     <div class="container__content">
-      <header class="text-lg mb-4">
+      <div class="text-lg mb-4">
         Improve your front-end skills by building projects
-      </header>
-      <article class="text-md">
+      </div>
+      <div class="text-md">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </article>
+      </div>
     </div>
   </div>
   
